--- a/CSS-basics/syntax/style/style.css
+++ b/CSS-basics/syntax/style/style.css
@@ -97,6 +97,31 @@ b{
 	text-align: center;
 	margin: auto;
 }
+.text-box{
+	min-height: 50px;
+	  
+    width: fit-content;
+    border-radius: 5px;
+    border: 2px dashed #abced4;
+    background: #abced444;
+    margin:auto; 
+    padding: 1rem; 
+    font-size: 4rem;
+    text-align: center;
+    box-shadow: -5px -5px #abced444;
+	transition: all 1s ease-in;
+	
+   
+}
+#p{
+	color: blue;
+	font-weight:bold; 
+	text-decoration:underline;
+}
+#main-p{
+	color: red;
+	font-weight:bold; 
+	text-decoration:underline;
 
 
 
