--- a/CSS-basics/tag-specific-properties/style/index.css
+++ b/CSS-basics/tag-specific-properties/style/index.css
@@ -1,101 +1,12 @@
-
-
-
-#hover:hover{
-	border: 2px solid #abced4; 
+#fit-img{
+    height: 200px; width: 300px;
+    border-radius: 7px;
+    border: 5px solid #abced4; 
+    display: block;
+    margin:auto; 
+    overflow: hidden;
 }
-
-#active{
-    cursor: pointer;
-}
-#active:active{
-	border: 2px solid #abced4; 
-}
-
-#first > .cir:first-child{
-    background: #abced4;
-}
-
-#last > .cir:last-child{
-    background: #abced4;
-}
-
-#even > .cir:nth-child(even){
-    background: #abced4;
-}
-
-#odd > .cir:nth-child(odd){
-    background: #abced4;
-}
-
-#fourth > .cir:nth-child(4){
-    background: #abced4;
-}
-
-#hops > .cir:nth-child(2n+1){
-    background: #abced4;
-}
-
-#focus:focus{
-    outline: 1px solid red;
-}
-
-
-#valid:valid{
-    box-shadow: -5px -5px #00800044;
-    outline: none;
-}
-
-#valid:invalid{
-    box-shadow: -5px -5px #ff000044;
-    outline:none; 
-}
-
-#disabled:disabled{
-    background: #dbdbdb44;
-    box-shadow: -5px -5px #dbdbdb44;
-    border: 2px dashed #dbdbdb; 
-
-}
-
-#checked input:checked + label{
-    background:#abced466;
-}
-
-#links a:visited{
-    color:gray;
-}
-#links a:link{
-    color:green;
-}
-#before-after{
-    width: fit-content;
-    background: var(--blue);
-}
-
-#before-after::before{
-    content: "content before"; 
-    margin: .3em;
-    padding: .3em;
-    background: #dbdbdb;
-    border: 1px solid #dbdbdb;
-
-}
-
-#before-after::after{
-    content: "content after"; 
-    margin: .3em;
-    padding: .3em;
-    background: #dbdbdb;
-    border: 1px solid #dbdbdb;
-
-}
-
-#first-letter:first-letter{
-    font-size: 60px;
-
-}
-#first-line:first-line{
-    font-size: 60px;
-
+#fit-img img{
+    width:100%; height:100%;
+    object-fit: cover;
 }
