--- a/CSS-basics/tag-specific-properties/style/index.css
+++ b/CSS-basics/tag-specific-properties/style/index.css
@@ -7,7 +7,7 @@
 }
 #fit-img img{
     width:100%; height:100%;
-    object-fit: scale-down;
+    object-fit: cover;
 }
 
 #obj-pos img{
@@ -18,4 +18,21 @@
 
 #list-type{
     list-style-type: lower-alpha;
+}
+
+#list-img{
+    list-style-image: url('../img/arrow.png');
+}
+
+#list-pos{
+    list-style-position: outside; 
+}
+
+#list-pos li{
+    background: #abced444;
+    list-style-position: outside;
+}
+
+#table, #table th, #table td{
+    border: 1px solid black;
 }
