--- a/CSS-basics/tag-specific-properties/style/index.css
+++ b/CSS-basics/tag-specific-properties/style/index.css
@@ -36,3 +36,18 @@
 #table, #table th, #table td{
     border: 1px solid black;
 }
+
+
+#border-spacing, #border-spacing th, #border-spacing td{
+    border: 1px solid black; 
+}
+
+#border-spacing{
+    border-spacing: 10px; 
+}
+
+
+#border-collapse, #border-collapse th, #border-collapse td{
+    border: 1px solid black;
+    border-collapse: collapse; 
+}
