--- a/CSS-basics/float/style/index.css
+++ b/CSS-basics/float/style/index.css
@@ -1,53 +1,9 @@
-#fit-img, #obj-pos{
-    height: 200px; width: 300px;
-    border-radius: 7px;
-    border: 5px solid #abced4; 
-    display: block;
-    margin:auto; 
+.float-right{
+    float: right; 
 }
-#fit-img img{
-    width:100%; height:100%;
-    object-fit: cover;
+.float-left{
+    float: left;
 }
-
-#obj-pos img{
-    width:100%; height:100%;
-    object-fit: none;
-    object-position: 50% 50%; 
-}
-
-#list-type{
-    list-style-type: lower-alpha;
-}
-
-#list-img{
-    list-style-image: url('../img/arrow.png');
-}
-
-#list-pos{
-    list-style-position: outside; 
-}
-
-#list-pos li{
-    background: #abced444;
-    list-style-position: outside;
-}
-
-#table, #table th, #table td{
-    border: 1px solid black;
-}
-
-
-#border-spacing, #border-spacing th, #border-spacing td{
-    border: 1px solid black; 
-}
-
-#border-spacing{
-    border-spacing: 10px; 
-}
-
-
-#border-collapse, #border-collapse th, #border-collapse td{
-    border: 1px solid black;
-    border-collapse: collapse; 
+#collapsing-parent{
+    
 }
