--- a/CSS-basics/float/style/style.css
+++ b/CSS-basics/float/style/style.css
@@ -51,7 +51,7 @@ code{
 	font-size: 3rem;
 }
 h1, h2, h3{
-	letter-spacing: -3px;
+	
 	font-weight: normal;
 }
 
@@ -62,6 +62,7 @@ h1, h2, h3{
 	margin:auto;
 	font-weight:  500;	
 	text-transform: uppercase;
+	letter-spacing: -3px;
 }
 .left{
 	margin:0; 
@@ -114,27 +115,27 @@ b{
 	z-index: -1;
 }
 .text-box{
-	min-height: 50px;
-	  
-    width: fit-content;
+	min-height: 250px;
+    width: 70%;
     border-radius: 5px;
     border: 2px dashed #abced4;
     background: #abced444;
     margin:auto; 
     padding: 1rem; 
-    font-size: 4rem;
+    font-size: 2.5rem;
     text-align: center;
     box-shadow: -5px -5px #abced444;
-    transition: all 1s ease-in;
+	transition: all 1s ease-in;
+	vertical-align: middle;
    
 }
 
-.cir{
-	width:40px; height:40px;
-	margin: .2em; 
-	background: #e0e0e0;
-	display: inline-block;
-	border-radius: 50%;
+.text-box div{
+	height: 100px; width: 150px;
+	background: #abced4;
+	border-radius: 5px;
+	vertical-align: bottom;
+	margin: 3px;
 }
 
 
