--- a/CSS-basics/float/style/index.css
+++ b/CSS-basics/float/style/index.css
@@ -5,5 +5,11 @@
     float: left;
 }
 #collapsing-parent{
-    
+    border: 2px solid grey; 
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
