--- a/CSS-basics/float/style/index.css
+++ b/CSS-basics/float/style/index.css
@@ -4,12 +4,16 @@
 .float-left{
     float: left;
 }
-#collapsing-parent{
+.collapsing-parent{
     border: 2px solid grey; 
+    margin:3px;
 }
 
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
-  }
+}
+.clear{
+    clear:both; 
+}
