--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body{
 	font-size: 2.5rem;
 	color: var(--text); 
 }
-
+a{color: var(--text); }
+li{margin: 20px auto;}
 
 .container{
 	width: 70%;
