--- a/CSS-basics/position/style/index.css
+++ b/CSS-basics/position/style/index.css
@@ -1,53 +1,18 @@
-#fit-img, #obj-pos{
-    height: 200px; width: 300px;
-    border-radius: 7px;
-    border: 5px solid #abced4; 
-    display: block;
-    margin:auto; 
+.parent{
+    width:200px;
+    background: hsla(189, 32%, 75%, 0.18);
+    margin: 1em auto; 
 }
-#fit-img img{
-    width:100%; height:100%;
-    object-fit: cover;
+.child{
+    background: #abced4;
+    padding: .5em;
 }
 
-#obj-pos img{
-    width:100%; height:100%;
-    object-fit: none;
-    object-position: 50% 50%; 
-}
+#relative .child{
+    position: relative;
+    top:10px;
+    left: 30px;
 
-#list-type{
-    list-style-type: lower-alpha;
-}
-
-#list-img{
-    list-style-image: url('../img/arrow.png');
-}
-
-#list-pos{
-    list-style-position: outside; 
-}
-
-#list-pos li{
-    background: #abced444;
-    list-style-position: outside;
-}
-
-#table, #table th, #table td{
-    border: 1px solid black;
-}
-
-
-#border-spacing, #border-spacing th, #border-spacing td{
-    border: 1px solid black; 
-}
-
-#border-spacing{
-    border-spacing: 10px; 
-}
-
-
-#border-collapse, #border-collapse th, #border-collapse td{
-    border: 1px solid black;
-    border-collapse: collapse; 
+    bottom:auto;
+    right:auto; 
 }
