--- a/CSS-basics/position/style/index.css
+++ b/CSS-basics/position/style/index.css
@@ -1,5 +1,5 @@
 .parent{
-    min-width:200px;
+    
     background: hsla(189, 32%, 75%, 0.18);
     margin: 1em ; 
     border: 3px solid #abced4;
@@ -7,10 +7,10 @@
 }
 .child{
     background: #909090;
-    padding: .5em;color: #eee;
+    color: #eee;
 }
 
-#relative .child{
+#relative div{
     position: relative;
     top:10px;
     left: 30px;
