--- a/CSS-basics/position/style/style.css
+++ b/CSS-basics/position/style/style.css
@@ -129,12 +129,15 @@ b{
    
 }
 
-.cir{
-	width:40px; height:40px;
-	margin: .2em; 
-	background: #e0e0e0;
-	display: inline-block;
-	border-radius: 50%;
+.grid{
+	margin:auto;
+	display: grid; 
+	grid-template-columns: 50% 50%;
+	width: 80%; 
+}
+.grid div{
+	border:1px solid #50505080; text-align: center;
+	padding:.5em;
 }
 
 
