--- a/CSS-basics/stacking/style/style.css
+++ b/CSS-basics/stacking/style/style.css
@@ -115,27 +115,19 @@ b{
 }
 .text-box{
 	min-height: 50px;
-	  
-    width: fit-content;
-    border-radius: 5px;
-    border: 2px dashed #abced4;
-    background: #abced444;
-    margin:auto; 
+    width: 300px; height: 300px;
+	border-radius: 5px;
+	border: 5px solid #abced4;
+    background: #ebf4f5;
     padding: 1rem; 
     font-size: 4rem;
     text-align: center;
-    box-shadow: -5px -5px #abced444;
-    transition: all 1s ease-in;
+	transition: all 1s ease-in;
+	
    
 }
 
-.cir{
-	width:40px; height:40px;
-	margin: .2em; 
-	background: #e0e0e0;
-	display: inline-block;
-	border-radius: 50%;
-}
+
 
 
 
