--- a/layouts/semantic-tags/index.html
+++ b/layouts/semantic-tags/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>Below is an example of a possible web page layout</li>
             </ul>
-            <img src="./SVG/Asset 1.svg" width="700" style="display: block; margin:auto">
+            <img src="./SVG/non-semantic.svg" width="700" style="display: block; margin:auto">
             <ul>
                 <li>Using <code class="highlight">&lt;div&gt;</code> and <code class="highlight">&lt;span&gt;</code> to build the page layout is fine. <br> Except that.. </li>
                 <ul>
