--- a/layouts/semantic-tags/index.html
+++ b/layouts/semantic-tags/index.html
@@ -46,7 +46,7 @@
         </section>
         <h1 class="title">Block Level Semantics</h1>
         <section>
-            <p>Used in the place of <code class="highlight">&lt;div&gt;</code> tags to break your page content into identified parts, each of which fulfills a specific role. <br>
+            <p>Used in the place of <code class="highlight">&lt;div&gt;</code> tags, to break your page content into identified parts, each of which fulfills a specific role. <br>
                 They are used to structure and build the page layout, and divide the page content into its basic parts</p>
 
                 <ul>
@@ -75,7 +75,7 @@
         </section>
         <h1 class="title">Inline Level Semantics</h1>
         <section>
-            <p>Used in the place of <code class="highlight">&lt;span&gt;</code> tags</p>
+            <p>Used in the place of <code class="highlight">&lt;span&gt;</code> tags, to  convey a specific meaning of some parts of the inline text.</p>
                 <li><code class="highlight">&lt;mark&gt;</code>: Highlighted text</li>
                 <br>
                 <li><code class="highlight">&lt;time&gt;</code>: Date or time</li>
