--- a/layouts/semantic-tags/index.html
+++ b/layouts/semantic-tags/index.html
@@ -47,7 +47,7 @@
         <h1 class="title">Block Level Semantics</h1>
         <section>
             <p>Used in the place of <code class="highlight">&lt;div&gt;</code> tags, to break your page content into identified parts, each of which fulfills a specific role. <br>
-                They are used to structure and build the page layout, and divide the page content into its basic parts</p>
+                They are used to structure and build the page layout, and divide the page content into its basic parts.</p>
 
                 <ul>
                     <li><code class="highlight">&lt;header&gt;</code>: Introductory information of a page or section.</li>
