--- a/layouts/semantic-tags/index.html
+++ b/layouts/semantic-tags/index.html
@@ -76,17 +76,17 @@
         <h1 class="title">Inline Level Semantics</h1>
         <section>
             <p>Used in the place of <code class="highlight">&lt;span&gt;</code> tags, to  convey a specific meaning of some parts of the inline text.</p>
-                <li><code class="highlight">&lt;mark&gt;</code>: Highlighted text</li>
+                <li><code class="highlight">&lt;mark&gt;</code>: Highlighted text.</li>
                 <br>
-                <li><code class="highlight">&lt;time&gt;</code>: Date or time</li>
+                <li><code class="highlight">&lt;time&gt;</code>: Date or time.</li>
                 <br>
-                <li><code class="highlight">&lt;strong&gt;</code>: Content has strong importance.</li>
+                <li><code class="highlight">&lt;strong&gt;</code>: Content that has strong importance.</li>
                 <br>
-                <li><code class="highlight">&lt;em&gt;</code>: Emphasize words </li>
+                <li><code class="highlight">&lt;em&gt;</code>: Emphasized words. </li>
                 <br>
-                <li><code class="highlight">&lt;q&gt;</code>: Shorter quotes</li>
+                <li><code class="highlight">&lt;q&gt;</code>: Shorter quotes.</li>
                 <br>
-                <li><code class="highlight">&lt;blockquote&gt;</code>: Longer quotes</li>
+                <li><code class="highlight">&lt;blockquote&gt;</code>: Longer quotes.</li>
                 <br>
                 <li><code class="highlight">&lt;abbr&gt;</code>: Abbreviations.</li>
                 <br>
