--- a/layouts/layout-tools/index.html
+++ b/layouts/layout-tools/index.html
@@ -24,6 +24,7 @@
         <br>
         <img src="./SVG/layouts.svg" alt="">
         </section>
+        <h1 class="title">Layout Tools</h1>
         <section>
             <h2>Tables</h2>
             <ul>
@@ -32,7 +33,7 @@
                 it is possible to build simple pages as the following.</li>
             </ul>
             <br>
-            <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="html,result" data-user="ulfat_dawood" data-slug-hash="OJRgVdw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Table-based Layout">
+            <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result" data-user="ulfat_dawood" data-slug-hash="OJRgVdw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Table-based Layout">
                     <span>See the Pen <a href="https://codepen.io/ulfat_dawood/pen/OJRgVdw">
                     Table-based Layout</a> by Ulfat (<a href="https://codepen.io/ulfat_dawood">@ulfat_dawood</a>)
                     on <a href="https://codepen.io">CodePen</a>.</span>
@@ -51,7 +52,7 @@
                 It is possible to build quite complicated web pages.</li>
                 <li>Here's an example:</li>
             </ul>
-            <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="ulfat_dawood" data-slug-hash="ExgXjqy" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Float-based Layouts">
+            <p class="codepen" data-height="500" data-theme-id="light" data-default-tab="result" data-user="ulfat_dawood" data-slug-hash="ExgXjqy" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Float-based Layouts">
                     <span>See the Pen <a href="https://codepen.io/ulfat_dawood/pen/ExgXjqy">
                     Float-based Layouts</a> by Ulfat (<a href="https://codepen.io/ulfat_dawood">@ulfat_dawood</a>)
                     on <a href="https://codepen.io">CodePen</a>.</span>
@@ -60,6 +61,29 @@
             
         </section>
         <h1 class="title">Modern Layout Tools</h1>
+        <section>
+            <h2>Flexbox</h2>
+            <ul>
+                <li>Used to build layout in one dimension - either a row or a column. </li>
+            </ul>
+            <p class="codepen" data-height="378" data-theme-id="light" data-default-tab="css,result" data-user="ulfat_dawood" data-slug-hash="mdrwemz" style="height: 378px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Flexbox">
+                    <span>See the Pen <a href="https://codepen.io/ulfat_dawood/pen/mdrwemz">
+                    Flexbox</a> by Ulfat (<a href="https://codepen.io/ulfat_dawood">@ulfat_dawood</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                  </p>
+                  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </section>
+        <section>
+            <h2>Grid</h2>
+            <li>Used to build layout in two dimension - rows, and columns at the same time. </li>
+
+            <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="css,result" data-user="ulfat_dawood" data-slug-hash="JjRJYOO" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Grid">
+                    <span>See the Pen <a href="https://codepen.io/ulfat_dawood/pen/JjRJYOO">
+                    Grid</a> by Ulfat (<a href="https://codepen.io/ulfat_dawood">@ulfat_dawood</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                  </p>
+                  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </section>
     </div>
 
 
