--- a/layouts/layout-tools/index.html
+++ b/layouts/layout-tools/index.html
@@ -29,8 +29,8 @@
             <h2>Tables</h2>
             <ul>
                 <li>Table-based layouts used to be the conventional way of structuring webpages. </li>
-                <li>with the combination of rows and columns with varying colspan/rowspan <br>
-                it is possible to build simple pages as the following.</li>
+                <li>with the combination of rows and columns with varying colspan/rowspan, <br>
+                it is possible to build webpages layouts as the following.</li>
             </ul>
             <br>
             <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result" data-user="ulfat_dawood" data-slug-hash="OJRgVdw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Table-based Layout">
