--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -20,14 +20,20 @@
         <section>
             <h2>When to use flexbox</h2>
             <ul>
-                <li>Flex box is used when building a layouts in one dimension (either colums and rows)</li>
+                <li>Flex box is used when building a layouts in one dimension (either colums and rows).</li>
+                <li>Small-scale layouts.</li>
             </ul>
             <h2>Why flexbox? </h2>
             <ul>
-                <li>Building layouts with more FLEXibility and stability than floats, inline-blocks and absolute
+                <li>Building layouts with more <span class="highlight">FLEX</span>ibility and stability than floats, inline-blocks and absolute
                     positioning.</li>
-                <li>Easy to set equal or varying width/height of elements and manage space between/around them.</li>
-                <li>Building responsive webpages, by easily changing the direction and order of elements.</li>
+                <li>Easily..
+                    <ul>
+                        <li>Setting equal or varying width/height of elements</li>
+                        <li>Managing space between/around elements.</li>
+                    </ul>
+                </li>
+                <li>Building responsive webpages, by easily changing the direction and/or order of elements.</li>
             </ul>
         </section>
     </div>
