--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -20,8 +20,8 @@
         <section>
             <h2>When to use flexbox</h2>
             <ul>
-                <li>Flex box is used when building a layouts in one dimension (either colums and rows).</li>
-                <li>Small-scale layouts.</li>
+                <li>Flexbox is used when building layouts in one dimension (either colums and rows).</li>
+                <li>Small-scale layouts (row of cards, colomn of menu items in a sidebar).</li>
             </ul>
             <h2>Why flexbox? </h2>
             <ul>
@@ -35,6 +35,31 @@
                 </li>
                 <li>Building responsive webpages, by easily changing the direction and/or order of elements.</li>
             </ul>
+            <h2>Flexbox properties</h2>
+            <p>There are separate properties for:</p>
+            <ul>
+                <li>The flex container</li>
+                <li>The flex items</li>
+            </ul>
+        </section>
+        <h1 class="title">Flex Container</h1>
+        <section>
+            <p><code>display: flex;</code></p>
+        </section>
+        <section>
+            <h2>Direction and wrap</h2>
+            <ul>
+                <li>Default direction is <span class="highlight">ROW</span>.</li>
+                <li><span class="highlight">WRAP</span>: allow flex items that don't fit to wrap to the next line, instead of trying to fit in one line. </li>
+            </ul>
+
+            <ul>
+                <li><code>flex-direction: row | column | row-reverse | column-reverse;</code></li>
+                <li><code>flex-wrap: nowrap | wrap | wrap-reverse;</code></li>
+            </ul>
+            <br>
+            <h3 class="title left">Sorthand :</h3>
+            
         </section>
     </div>
 
