--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -16,24 +16,16 @@
 
 <body>
     <div class="container">
-        <h1 class="title">FlexBox</h1>
+        <h1 class="title">Grid</h1>
         <section>
-            <h2>When to use flexbox</h2>
+            <h2>When to use grid?</h2>
             <ul>
-                <li>Flex box is used when building a layouts in one dimension (either colums and rows).</li>
-                <li>Small-scale layouts.</li>
+                <li>Grid is used when building a layouts in two dimension (rows and columns at the same time).</li>
+                <li>Large-scale layouts.</li>
             </ul>
-            <h2>Why flexbox? </h2>
+            <h2>Why grid? </h2>
             <ul>
-                <li>Building layouts with more <span class="highlight">FLEX</span>ibility and stability than floats, inline-blocks and absolute
-                    positioning.</li>
-                <li>Easily..
-                    <ul>
-                        <li>Setting equal or varying width/height of elements</li>
-                        <li>Managing space between/around elements.</li>
-                    </ul>
-                </li>
-                <li>Building responsive webpages, by easily changing the direction and/or order of elements.</li>
+                
             </ul>
         </section>
     </div>
