--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -18,12 +18,12 @@
     <div class="container">
         <h1 class="title">FlexBox</h1>
         <section>
-            <h2>When to use flexbox</h2>
+            <h2>When to Use Flexbox</h2>
             <ul>
                 <li>Flexbox is used when building layouts in one dimension (either colums and rows).</li>
                 <li>Small-scale layouts (row of cards, colomn of menu items in a sidebar).</li>
             </ul>
-            <h2>Why flexbox? </h2>
+            <h2>Why Flexbox? </h2>
             <ul>
                 <li>Building layouts with more <span class="highlight">FLEX</span>ibility and stability than floats, inline-blocks and absolute
                     positioning.</li>
@@ -35,7 +35,7 @@
                 </li>
                 <li>Building responsive webpages, by easily changing the direction and/or order of elements.</li>
             </ul>
-            <h2>Flexbox properties</h2>
+            <h2>Flexbox Properties</h2>
             <p>There are separate properties for:</p>
             <ul>
                 <li>The flex container</li>
@@ -47,7 +47,7 @@
             <p><code>display: flex;</code></p>
         </section>
         <section>
-            <h2>Direction and wrap</h2>
+            <h2>Direction and Wrap</h2>
             <ul>
                 <li>Default direction is <span class="highlight">ROW</span>.</li>
                 <li><span class="highlight">WRAP</span>: allow flex items that don't fit to wrap to the next line, instead of trying to fit in one line. </li>
@@ -59,11 +59,27 @@
             </ul>
             <br>
             <h3 class="title left">Sorthand :</h3>
-            
+            <ul><li><code>flex-flow: flex-direction flex-wrap;</code></li></ul>
+        </section>
+
+        <section>
+            <h2>Items Alignment</h2>
+            <ul>
+                <li><code>justify-content: flex-start | flex-end | center | space-between | space-around | space-evenly;</code></li>
+                <ul>
+                        <li>Defines items alignment along the set direction</li>
+                        <li>sets the <span class="highlight">horizontal</span> alignment when direction is <code class="highlight">row</code>).</li>
+                </ul>
+            </ul>
+
+            <p></p>
+        </section>
+        <section>
+            <h2>Wrapped Lines Alignment</h2>
         </section>
     </div>
 
-    </section>
+   
 
 
 
