--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -69,6 +69,7 @@
                 <ul>
                         <li>Defines items alignment along the set direction</li>
                         <li>sets the <span class="highlight">horizontal</span> alignment when direction is <code class="highlight">row</code>).</li>
+                        fle
                 </ul>
             </ul>
 
